# ms-teams-graph-sdk

./: README.md  pyproject.toml
ms_teams_graph_sdk/: settings.py
ms_teams_graph_sdk/auth/: __init__.py  ms_graph_api_auth_manager.py
ms_teams_graph_sdk/client/: __init__.py  ms_graph_api_base_client.py  ms_teams_graph_api_client.py
ms_teams_graph_sdk/resources/: __init__.py  channels.py
ms_teams_graph_sdk/utilities/: logger.py
